fix? for scrollbar crapyness in chrome windows

--- a/app/assets/stylesheets/_topics.scss
+++ b/app/assets/stylesheets/_topics.scss
@@ -36,8 +36,11 @@ body .modal_dialog_topic {
   }
 }
 .column_index {
-  max-height:84%;
-  overflow:auto;
+  max-height:86%;
+  overflow:hidden;
+  &:hover {
+    overflow:auto;
+  }
 }
 
 .content-window-bg-color {
